--- a/.github/workflows/MoneywaveAPIReport.yml
+++ b/.github/workflows/MoneywaveAPIReport.yml
@@ -1,4 +1,4 @@
-name: MoneywaveHTMLTestReport
+name: API_Report
 on:
   push:
     branches:
@@ -21,18 +21,27 @@ jobs:
       run: |
        npm install -g newman
        npm install -g newman-reporter-htmlextra
+
     # Make directory to upload the test results
     - name: Make Directory for results
-      run: mkdir -p MoneywaveTestReport
+      run: mkdir -p testResults
 
 
-    # Run the POSTMAN collection With Report
+    # Run the POSTMAN collection
     - name: Run POSTMAN collection
-      run: newman run MoneyWave.postman_collection.json -e Moneywave.postman_environment.json -r htmlextra --reporter-htmlextra-export MoneywaveTestReport/htmlreport.html --reporter-htmlextra-darkTheme  > MoneywaveTestReport/runreport1.html
+      run: newman run "MoneyWave Copy.postman_collection.json" -e Moneywave.postman_environment.json -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html --reporter-htmlextra-darkTheme  > testResults/runreport1.html
 
-    # Upload the contents of Test Results directory to workspace
+    # Upload the contents of Test Results directory to workspace lol
     - name: Output the run Details
       uses: actions/upload-artifact@v2
+      if: always()
       with: 
        name: RunReports
        path: testResults
+       
+       
+    - name: Publish Unit Test Results
+      uses: EnricoMi/publish-unit-test-result-action@v1
+      if: always()
+      with:
+       files: test-results/**/*.xml
