--- a/.github/workflows/MoneywaveAPIReport.yml
+++ b/.github/workflows/MoneywaveAPIReport.yml
@@ -43,13 +43,11 @@ jobs:
        
    # SLack Notification
     - name: Send Slack Notification
-      uses: rtCamp/action-slack-notify@v2
+      uses: ravsamhq/notify-slack-action@v1
       if: always()
       with:
        status: ${{ job.status }} # required
       env:
-       SLACK_TITLE: API Test Status
-       SLACK_USERNAME: Adewale
-       SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }} # required
+       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }} # required
        
        
